# nu_plugin_qr_maker

./: Cargo.toml  README.md  nupm.nuon  package.nuon
src/: main.rs  to_qr.rs
