[package]
name = "nu_plugin_qr_maker"
license = "MIT"
authors = ["Motalleb Fallahnezhad <fmotalleb@gmail.com>"]
keywords = ["nushell", "qr-code", "plugin"]
homepage = "https://github.com/FMotalleb/nu_plugin_qr_maker"
repository = "https://github.com/FMotalleb/nu_plugin_qr_maker"
description = "A nushell plugin to create qr code in terminal"
version = "1.0.1"
edition = "2021"
readme = "README.md"

[dependencies]
nu-plugin = "0.88.1"
nu-protocol = { version = "0.88.1", features = ["plugin"] }
qr2term = { version = "0.3.1" }
